tests/syntax/bad/testfile-bad_ident2-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
void  A'A() { }
